--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ textarea {
     height: auto; /* 自動調整高度 */
     overflow: visible; /* 確保不裁切內容 */
     position: relative; /* 確保子元素可以使用絕對定位 */
+    background-color: #fcf98e; /*背景色 寫在CSS檔才能透過JS修改*/
   }
   
   /* logo */
@@ -132,7 +133,7 @@ textarea {
     padding: 0 !important; /* 去除表格內邊距 */
     border-collapse: collapse; /* 合併表格邊框 */
     width: 100%; /* 讓表格填滿容器 */
-    font-family: 'DFKai-sb', Courier, monospace;
+    
   }
 
   body, html {
