--- a/css/style.css
+++ b/css/style.css
@@ -109,10 +109,18 @@ textarea {
     height: auto; /* 自動調整高度 */
     overflow: visible; /* 確保不裁切內容 */
     position: relative; /* 確保子元素可以使用絕對定位 */
-    border-radius: 15px;
-    background-color: white;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    background-color: #fcf98e; /*背景色 寫在CSS檔才能透過JS修改*/
+  }
+  
+  /* logo */
+  #logo {
+    position: absolute; /* 絕對定位，基於父容器 */
+    bottom: 8px; /* 距離表格底部 10px */
+    right: 8px; /* 距離表格右側 10px */
+    width: 100px; /* 設置圖片寬度 */
+    height: auto; /* 保持圖片比例 */
+    z-index: 10; /* 確保圖片顯示在最上層 */
+    scale: 1.3; /* 放大 1.5 倍 */
   }
   
   .container {
@@ -124,7 +132,6 @@ textarea {
     margin: 0 !important; /* 去除表格外邊距 */
     padding: 0 !important; /* 去除表格內邊距 */
     border-collapse: collapse; /* 合併表格邊框 */
-    
     width: 100%; /* 讓表格填滿容器 */
     
   }
@@ -138,62 +145,14 @@ textarea {
     background-color: #f8f9fa;
   }
   
-  #title {
+  #time {
     font-size: 18px; /* 字體大小 */
-    color: rgb(0, 0, 0); /* 字體顏色 */
-    text-align: center; /* 文字居中對齊 */
-    background-color: #b1e9ff; /*背景色 寫在CSS檔才能透過JS修改*/
+    color: blue; /* 字體顏色 */
+    font-weight: bold; /* 加粗字體 */
+    text-align: left; /* 文字居中對齊 */
   }
 
-  .tablecontent {
-    font-size: 16px; /* 字體大小 */
-    color: rgb(0, 0, 0); /* 字體顏色 */
-    text-align: left; /* 文字靠左對齊 */ 
-    border-bottom: 1px solid #ddd;
-    width: 95%;
-    margin: 0 auto;
-    padding: 0px 0;
-  }
-
-  #ticket-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .watermark {
-      position: absolute;
-      top: 94%;
-      left: 75%;
-      transform: translate(-50%, -50%) rotate(0);
-      font-size: 27px;
-      color: rgba(0, 0, 0, 0.1); /* 淡灰色半透明 */
-      white-space: nowrap;
-      pointer-events: none; /* 不干擾使用者互動 */
-      z-index: 10; /* 確保在內容之下，但可視 */
-      font-weight: bold;
-    }
-
-    .watermark-img {
-      width: 200px;
-      height: auto;
-      pointer-events: none;
-    }
-
-    #client {
-      color: rgb(140, 4, 213);
-      font-weight: bold; /* 加粗字體 */
-      font-size: 18px; /* 字體大小 */
-    }
-
-    #time {
-      font-size: 18px; /* 字體大小 */
-      color: rgb(0, 38, 255); /* 字體顏色 */
-      font-weight: bold; /* 加粗字體 */
-      text-align: left; /* 文字居中對齊 */
-    }
-
-    #preview-overlay {
+      #preview-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -235,5 +194,3 @@ textarea {
   width: 36px;
   height: 36px;
 }
-
-
