--- a/css/oldstyle.css
+++ b/css/oldstyle.css
@@ -233,7 +233,7 @@ textarea {
 #side-buttons {
   position: fixed;
   top: 50%;
-  right: 1px;
+  right: 1%;
   transform: translateY(-50%);
   display: flex;
   flex-direction: column;
@@ -244,7 +244,7 @@ textarea {
 
 #side-buttons button {
   min-width: 70px;  /* 最小寬度 */
-  max-width: 140px;  /* 最大寬度 */
+  max-width: 70px;  /* 最大寬度 */
   padding: 8px 12px;
   font-size: 14px;
   border-radius: 8px;
