--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,13 @@ body {
   border: 1px solid #ccc;
   border-radius: 10px;
   margin-top: 10px;
+  transform: scale(0.7);
+  transform-origin: top center; /* 從上方置中縮放 */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 
 #controlPanel {
   position: fixed;
